# project2_romanchuk_roman_m25-555

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
src/primitive_db/: constants.py  core.py  db_meta.json  engine.py  main.py  parser.py  utils.py
src/primitive_db/data/: db_meta.json  users.json
