[project]
name = "project2-romanchuk-roman-m25-555"
version = "0.1.0"
description = ""
authors = [
    { name = "RomanchukRoman", email = "r.romanchuk@ya.ru" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["prompt (>=0.4.1,<0.5.0)"]

[project.scripts]
database = "primitive_db.main:main"

[tool.poetry]
packages = [
    { include = "primitive_db", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]
